[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/UI/sCheckButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Sometimes.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/sButtonPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/sButton.png" type="Texture" id=4]
[ext_resource path="res://Scripts/UI/PauseMenuOptions.gd" type="Script" id=5]
[ext_resource path="res://Assets/UI/sPopUp.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=6]
size = 60
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 6 )

[sub_resource type="Animation" id=10]
resource_name = "CheckButtonHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "CheckButtonUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 180
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=14]
resource_name = "BackHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "BackUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 200
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=17]
default_font = SubResource( 8 )

[sub_resource type="DynamicFont" id=18]
size = 60
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=19]
default_font = SubResource( 18 )

[sub_resource type="Animation" id=20]
resource_name = "CheckButtonHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.33, 0.33 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "CheckButtonUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.33, 0.33 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="DynamicFont" id=23]
size = 57
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=24]
default_font = SubResource( 23 )

[node name="PauseMenuOptions" type="CanvasLayer"]
layer = 100

[node name="PauseMenuOptions" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -354, 0 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="PauseMenuOptions"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Label" type="Label" parent="PauseMenuOptions"]
margin_left = 60.0
margin_top = 258.0
margin_right = 925.0
margin_bottom = 340.0
theme = SubResource( 9 )
text = "AUTOMATICALLY POP THE UPGRADE MENU"
align = 1
valign = 1

[node name="CheckButton" type="TextureButton" parent="PauseMenuOptions"]
margin_left = 826.0
margin_top = 144.0
margin_right = 1126.0
margin_bottom = 444.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 150, 150 )
texture_normal = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenuOptions/CheckButton"]
anims/CheckButtonHover = SubResource( 10 )
anims/CheckButtonUnhover = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="BackButton" type="TextureButton" parent="PauseMenuOptions"]
margin_left = -157.0
margin_top = 369.0
margin_right = 1315.0
margin_bottom = 669.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 736, 150 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_editor_description_": "Back"
}

[node name="Label" type="Label" parent="PauseMenuOptions/BackButton"]
margin_left = 510.0
margin_top = 36.6666
margin_right = 960.0
margin_bottom = 277.667
theme = SubResource( 13 )
text = "B A C K"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenuOptions/BackButton"]
anims/BackHover = SubResource( 14 )
anims/BackUnhover = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="OPTIONS" type="Label" parent="PauseMenuOptions"]
margin_left = 238.0
margin_top = 61.0
margin_right = 929.0
margin_bottom = 254.0
rect_pivot_offset = Vector2( 345.5, 96.5 )
theme = SubResource( 17 )
text = "OPTIONS"
align = 1
valign = 1

[node name="FullScreenLabel" type="Label" parent="PauseMenuOptions"]
margin_left = 92.0
margin_top = 378.0
margin_right = 957.0
margin_bottom = 460.0
theme = SubResource( 19 )
text = "TOGGLE FULLSCREEN"
valign = 1

[node name="FullScreenButton" type="TextureButton" parent="PauseMenuOptions"]
margin_left = 826.0
margin_top = 264.0
margin_right = 1126.0
margin_bottom = 564.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 150, 150 )
texture_normal = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenuOptions/FullScreenButton"]
anims/CheckButtonHover = SubResource( 20 )
anims/CheckButtonUnhover = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="SPopUpUpgradeMenu" type="Sprite" parent="PauseMenuOptions"]
visible = false
position = Vector2( 577, 297.375 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="PopUpMsg" type="Label" parent="PauseMenuOptions/SPopUpUpgradeMenu"]
margin_left = -575.0
margin_top = -207.0
margin_right = 676.0
margin_bottom = 203.0
theme = SubResource( 24 )
text = "Having this option turned on will pop the \"Upgrade Selector Menu\"
 every ten kills. While having it turned off will allow you to upgrade your
character using the buttons on your keyboard :
- Pressing 1 will increase your attack.
- Pressing 2 will increase your life.
- Pressing 3 will increase your speed.
- Pressing M will pop the Upgrade Selector Menu."

[node name="SPopUpFullscreen" type="Sprite" parent="PauseMenuOptions"]
visible = false
position = Vector2( 547, 417 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="PopUpMsg" type="Label" parent="PauseMenuOptions/SPopUpFullscreen"]
margin_left = -666.0
margin_top = -86.0
margin_right = 756.0
margin_bottom = 136.0
theme = SubResource( 24 )
text = "Sets the game display mode to fullscreen when toggled on. You may experience
performance issues when playing the game on fullscreen.
Turning it off is great for low spec devices."

[connection signal="mouse_entered" from="PauseMenuOptions/CheckButton" to="PauseMenuOptions" method="_on_CheckButton_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuOptions/CheckButton" to="PauseMenuOptions" method="_on_CheckButton_mouse_exited"]
[connection signal="pressed" from="PauseMenuOptions/CheckButton" to="PauseMenuOptions" method="_on_CheckButton_pressed"]
[connection signal="mouse_entered" from="PauseMenuOptions/BackButton" to="PauseMenuOptions" method="_on_BackButton_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuOptions/BackButton" to="PauseMenuOptions" method="_on_BackButton_mouse_exited"]
[connection signal="pressed" from="PauseMenuOptions/BackButton" to="PauseMenuOptions" method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="PauseMenuOptions/FullScreenButton" to="PauseMenuOptions" method="_on_FullScreenButton_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenuOptions/FullScreenButton" to="PauseMenuOptions" method="_on_FullScreenButton_mouse_exited"]
[connection signal="pressed" from="PauseMenuOptions/FullScreenButton" to="PauseMenuOptions" method="_on_FullScreenButton_pressed"]
